--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server:127.0.0.1; Port=3306,Database=cheapest_cart_app_db; User=cheapestcart_user; Password=Lodisy12"
+  },
   "AllowedHosts": "*"
 }
